ontol/ontol-compiler/test-cases/error/sequence/overlapping_indexes.on
def u (
    rel* 0..3: i64
    rel* 2..4: text // ERROR overlapping indexes
)
